fix rootmin eye level and stagger second phase